# naiagame

./: README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: point_actor.rs  shared_behavior.rs
